// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonGroup /> errors when a non-button is passed 1`] = `
"Warning: Failed prop type: \`ButtonGroup.children\` only accepts components matching the regular expression /(?:Tooltip|Permission|Trebuchet|ERF)|(?:Buttons?|Links?)$/
    in ButtonGroup"
`;

exports[`<ButtonGroup /> handles buttons that return falsy values 1`] = `
<div
  className="buttonGroup-0-2-1 buttonGroup_stacked-0-2-2"
>
  <div
    className="cell_stacked-0-2-4"
    key=".1"
  >
    <Button>
      Two
    </Button>
  </div>
</div>
`;

exports[`<ButtonGroup /> handles components that return a falsy value 1`] = `
<div
  className="buttonGroup-0-2-1 buttonGroup_stacked-0-2-2"
>
  <div
    className="cell_stacked-0-2-4"
    key=".0"
  >
    <FakeButton />
  </div>
</div>
`;

exports[`<ButtonGroup /> renders a single button 1`] = `
<div
  className="buttonGroup-0-2-1"
>
  <div
    className="cell-0-2-3"
    key=".0"
  >
    <Button>
      One
    </Button>
  </div>
</div>
`;

exports[`<ButtonGroup /> renders buttons 1`] = `
<div
  className="buttonGroup-0-2-1"
>
  <div
    className="cell-0-2-3"
    key=".0"
  >
    <Button>
      One
    </Button>
  </div>
  <div
    className="cell-0-2-3"
    key=".1"
  >
    <Button>
      Two
    </Button>
  </div>
  <div
    className="cell-0-2-3"
    key=".2"
  >
    <Button>
      Three
    </Button>
  </div>
</div>
`;

exports[`<ButtonGroup /> renders buttons stacked 1`] = `
<div
  className="buttonGroup-0-2-1 buttonGroup_stacked-0-2-2"
>
  <div
    className="cell_stacked-0-2-4"
    key=".0"
  >
    <Button>
      One
    </Button>
  </div>
  <div
    className="cell_stacked-0-2-4"
    key=".1"
  >
    <Button>
      Two
    </Button>
  </div>
  <div
    className="cell_stacked-0-2-4"
    key=".2"
  >
    <Button>
      Three
    </Button>
  </div>
</div>
`;
